<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@+id/time"
        android:layout_above="@+id/speed_layout">

        <com.kramarenko.puzzle15.UI_Components.SquaredRelativeLayout
            android:id="@+id/board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/puzzle_board_background"
            android:padding="3dp" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/speed_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_layout"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="70dp"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solving_speed"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <SeekBar
            android:id="@+id/speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="1"
            android:max="500"
            android:progress="399"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:background="@color/buttons_panel">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/btn"
            android:text="@string/new_game"
            android:id="@+id/new_game"
            android:layout_centerInParent="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/btn"
                android:text="@string/reset"
                android:id="@+id/reset"
                android:visibility="invisible"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/btn"
                android:text="@string/solve"
                android:visibility="invisible"
                android:id="@+id/solve"/>

        </LinearLayout>



    </RelativeLayout>

</RelativeLayout>
